# xarray-einstats

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  docstub.toml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: publish.yml  rtd-link-preview.yml  test.yml
docs/source/: api.md  changelog.md  code_of_conduct.md  conf.py  contributing.md  dev_reference.md  einops.md  getting_started.md  index.md  installation.md  stats.md
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: einops.md  index.md  linalg.md  numba.md  stats.md
docs/source/background/: einops.md  index.md  linalg.md  stats.md
docs/source/contributing/: dev_reference.md  how_to.md  overview.md
docs/source/tutorials/: dask_support.md  einops-basics-port.ipynb  index.md  linalg_tutorial.ipynb  np_linalg_tutorial_port.ipynb  stats_tutorial.ipynb  utils.py
docs/source/tutorials/einops-image.zarr/: .zmetadata
docs/source/tutorials/einops-image.zarr/ims/: .zarray  .zattrs  0.0.0.0  0.1.0.0  1.0.0.0  1.1.0.0
src/xarray_einstats/: __init__.py  __init__.pyi  accessors.py  accessors.pyi  einops.py  einops.pyi  linalg.py  linalg.pyi  numba.py  numba.pyi  stats.py  stats.pyi  tutorial.py  tutorial.pyi
src/xarray_einstats/tests/: test_einops.py  test_linalg.py  test_stats.py
tests/: test_accessors.py  test_base.py  test_einops.py  test_import.py  test_linalg.py  test_numba.py  test_stats.py  utils.py
